<!--
   Copyright 2013-2015 Daniel Pereira Coelho

   This file is part of the Expenses Android Application.

   Expenses is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation in version 3.

   Expenses is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Expenses.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background_material_light"
    android:paddingTop="5dp">

    <TextView
        style="@style/MN.MenuSubtitle"
        android:text="@string/expenseslist_dr1"/>

    <LinearLayout
        android:id="@+id/menu1"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/stats_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr2"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu9"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/list_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr12"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu2"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/stats_time_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr3"/>
    </LinearLayout>

    <TextView
        style="@style/MN.MenuSubtitle"
        android:text="@string/expenseslist_dr4"/>

    <LinearLayout
        android:id="@+id/menu3"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/groups_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr5"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu4"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/categories_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr6"/>
    </LinearLayout>

    <TextView
        style="@style/MN.MenuSubtitle"
        android:text="@string/expenseslist_dr7"/>

    <LinearLayout
        android:id="@+id/menu5"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/money_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr8"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu6"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/sd_storage_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr9"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu7"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/checkbox_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu8"
        style="@style/MN.MenuItem">

        <ImageView
            style="@style/MN.MenuImageView"
            android:src="@drawable/info_grey"/>

        <TextView
            style="@style/MN.MenuTextView"
            android:text="@string/expenseslist_dr11" />
    </LinearLayout>

</LinearLayout>