<!-- 
   Copyright 2013, 2014 Daniel Pereira Coelho
   
   This file is part of the Expenses Android Application.

   Expenses is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation in version 3.

   Expenses is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Expenses.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/exportdata_l1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportdata_l2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportdata_l5" />
    
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportdata_l3"
        android:textAppearance="@style/MN.TextAppearance.Subtitle"
        android:layout_marginTop="5dp" />
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:background="@color/hBar"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/textView10"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/exportdata_l4"
			android:padding="5dp"
			android:gravity="center_vertical" />

	    <Button
	        android:id="@+id/button3"
	        style="@style/MN.Widget.DialogButton"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center_vertical"
	        android:textStyle="bold" />
	    
	</LinearLayout>
    

</LinearLayout>