<!-- 
   Copyright 2013, 2014 Daniel Pereira Coelho
   
   This file is part of the Expenses Android Application.

   Expenses is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation in version 3.

   Expenses is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Expenses.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android1:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android1:orientation="vertical"
    android1:padding="3dp" >

    <RadioGroup
        android1:id="@+id/radioGroup1"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:orientation="vertical" >

        <RadioButton
            android1:id="@+id/radio0"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:checked="true"
            android1:text="@string/editgroups_l3" />

        <RadioButton
            android1:id="@+id/radio1"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/editgroups_l4" />
    </RadioGroup>

    <Spinner
        android1:id="@+id/spinner1"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" />

    <LinearLayout
        android1:id="@+id/LinearLayout2"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content" >

        <Button
            android1:id="@+id/button1"
            style="@style/MN.Widget.DialogButton"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:layout_weight="1"
            android1:text="@string/gp_3" />
        
        <Button
            android1:id="@+id/button2"
            style="@style/MN.Widget.DialogButton"
            android1:layout_width="match_parent"
            android1:layout_height="wrap_content"
            android1:layout_weight="1"
            android1:text="@string/gp_2" />

    </LinearLayout>

</LinearLayout>